// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuthenticationProviderInformation />  renders correctly when AMR is helsinkiAccountAMR should render helsinki account information as expected based on config 1`] = `
<ProfileInformationAccountManagementLink>
  <ProfileSection>
    <section
      className="profile-section"
    >
      <div
        className="content-wrapper"
      >
        <h2
          className="section-title"
        >
          profileInformation.authenticationMethod
        </h2>
        <div
          className="text-content-wrapper"
        >
          <span
            className="value"
          >
            identityProvider.helsinkiAccount
          </span>
        </div>
      </div>
    </section>
  </ProfileSection>
</ProfileInformationAccountManagementLink>
`;

exports[`<AuthenticationProviderInformation />  renders correctly when AMR is tunnistusSuomifiAMR should render suomi.fi information as expected based on config 1`] = `
<ProfileInformationAccountManagementLink>
  <ProfileSection>
    <section
      className="profile-section"
    >
      <div
        className="content-wrapper"
      >
        <h2
          className="section-title"
        >
          profileInformation.authenticationMethod
        </h2>
        <div
          className="text-content-wrapper"
        >
          <span
            className="value"
          >
            identityProvider.tunnistusSuomifi
          </span>
        </div>
      </div>
    </section>
  </ProfileSection>
</ProfileInformationAccountManagementLink>
`;
